VP 10.0.0 Changelog
------------------------
- add rubber element

- shader based inserts/lights/bulbs
- shader based mesh ball

- improved smoothness for ramps (centripetal Catmull-Rom splines)
- changed opacity/transparency handling for ramps (Alpha/Acrylic have been replaced by new props Transparent/Opacity)

- GetElement, GetElementByName, GetBalls added to Table Script methods
- renaming of IsVisible properties (flasher, ramp) to Visible

- include optional nudge filtering (selectable in the keys dialog)
  and remove implicit dead zone handling (if you have the dead zone setting at 0% and now experience problems, set it to at least 1%)

- new audio library for music playback (BASS)

- 64bit port (handle with care, might still cause issues)

- DirectX 8 port for input handling (currently disabled)

- texture size limit/downscale now respects aspect ratio (currently disabled)

- script editor updated to use latest scintilla (3.4.4)

- technical note: make sure to install Microsoft SDK 5.0,7.0A,7.1 or 7.1A, if you compile VP and get missing header errors

VP 9.9.0 Changelog
------------------------
- rendering engine has been ported to DirectX 9 and now takes much better advantage of 3D hardware

- Region Updates, Region Optimization, Alternate Render are not needed anymore due to the new graphics pipeline and have been removed

- true fullscreen setting has been removed due to incompatibility with VPinMAME. Instead, a windowed fullscreen option has been added to the list of video modes

- add options for wire ramps (define diameter and distance x/y of wires)
- add sphere mapping to wired ramps if an image was assigned to a wired ramp

- add CurrentAngle function to spinner

- add depth bias option to flasher, light, primitive and ramp to fine tune depth sorting

- enable NVIDIA Optimus cards by default

- new video setting: Force anisotropic texture filtering. This results in higher quality results, but can affect performance on lower end cards
