@@ -224,6 +224,8 @@ PinInput::PinInput()
    m_ac_didonce = 0;
 
    m_tilt_updown = 0;
+
+   m_linearPlunger = false;
 }
 
 PinInput::~PinInput()
@@ -321,33 +323,39 @@ BOOL CALLBACK DIEnumJoystickCallback(LPCDIDEVICEINSTANCE lpddi, LPVOID pvRef)
 	hr =  ppinput->m_pJoystick[ppinput->e_JoyCnt]->GetProperty( DIPROP_PRODUCTNAME,  &dstr.diph);
 
 	if (hr == S_OK)
-		{	
+	{	
 		if (!WzSzStrCmp(dstr.wsz, "PinballWizard"))
-			{
-				ppinput->uShockDevice = ppinput->e_JoyCnt;	// remember uShock
-				ppinput->uShockType = USHOCKTYPE_PBWIZARD; //set type 1 = PinballWizard
-			}
+		{
+			ppinput->uShockDevice = ppinput->e_JoyCnt;	// remember uShock
+			ppinput->uShockType = USHOCKTYPE_PBWIZARD;  //set type 1 = PinballWizard
+		}
 		else if (!WzSzStrCmp(dstr.wsz, "UltraCade Pinball"))
-			{
-				ppinput->uShockDevice = ppinput->e_JoyCnt;	// remember uShock
-				ppinput->uShockType = USHOCKTYPE_ULTRACADE; //set type 2 = UltraCade Pinball
-			}		
+		{
+			ppinput->uShockDevice = ppinput->e_JoyCnt;	// remember uShock
+			ppinput->uShockType = USHOCKTYPE_ULTRACADE; //set type 2 = UltraCade Pinball
+		}		
 		else if (!WzSzStrCmp(dstr.wsz, "Microsoft SideWinder Freestyle Pro (USB)"))
-			{
-				ppinput->uShockDevice = ppinput->e_JoyCnt;	// remember uShock
-				ppinput->uShockType = USHOCKTYPE_SIDEWINDER; //set type 3 = Microsoft SideWinder Freestyle Pro
-			}
+		{
+			ppinput->uShockDevice = ppinput->e_JoyCnt;	// remember uShock
+			ppinput->uShockType = USHOCKTYPE_SIDEWINDER;//set type 3 = Microsoft SideWinder Freestyle Pro
+		}
 		else if (!WzSzStrCmp(dstr.wsz, "VirtuaPin Controller"))
-			{
-				ppinput->uShockDevice = ppinput->e_JoyCnt;	// remember uShock
-				ppinput->uShockType = USHOCKTYPE_VIRTUAPIN; //set type 4 = VirtuaPin Controller
-			}
+		{
+			ppinput->uShockDevice = ppinput->e_JoyCnt;	// remember uShock
+			ppinput->uShockType = USHOCKTYPE_VIRTUAPIN; //set type 4 = VirtuaPin Controller
+		}
+        else if (!WzSzStrCmp(dstr.wsz, "Pinscape Controller"))
+        {
+            ppinput->uShockDevice = ppinput->e_JoyCnt;  // remember uShock
+            ppinput->uShockType = USHOCKTYPE_GENERIC;   //set type = Generic
+            ppinput->m_linearPlunger = 1;               // use linear plunger calibration
+        }
 		else 
-			{
-				ppinput->uShockDevice = ppinput->e_JoyCnt;	// remember uShock
-				ppinput->uShockType = USHOCKTYPE_GENERIC; //Generic Gamepad
-			}
-		}	
+		{
+			ppinput->uShockDevice = ppinput->e_JoyCnt;	// remember uShock
+			ppinput->uShockType = USHOCKTYPE_GENERIC;   //Generic Gamepad
+		}
+	}	
 	hr = ppinput->m_pJoystick[ppinput->e_JoyCnt]->SetDataFormat(&c_dfDIJoystick);
 
 	// joystick input foreground or background focus
